<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">File Manager</string>
    <string name="desktop_name">File Manager</string>
    <string name="lewa_name">Lewa SDManager</string>
    <string name="tab_category">Categories</string>
    <string name="category">Categories</string>
    <string name="tab_sdcardlist">SD Card List</string>
    <string name="nofile">No files in this folder</string>
    <string name="sd_name">SD Card</string>
    <string name="copy_title">Choose the folder you want to copy</string>
    <string name="copy_button">Copy here</string>
    <string name="choose_path">Choose folder</string>
    <string name="folder_name">Enter folder name</string>
    <string name="really_delete">Do you really want to delete %s ？</string>
    <string name="paste">Paste</string>
    <string name="cancel">Cancel</string>
    <string name="cut">Cut</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="select_all">All</string>
    <string name="home">Home</string>
    <string name="menu_new_folder">New Folder Name</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_send">Send</string>
    <string name="menu_open">Open</string>
    <string name="menu_move">Cut</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_fileinfo">Details</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_new_dir">Create folder</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_sort_name">Name</string>
    <string name="menu_sort_size">Size</string>
    <string name="menu_sort_time">Time</string>
    <string name="menu_sort_type">Type</string>
    <string name="folder_renamed">Folder already renamed</string>
    <string name="file_renamed">File already renamed</string>
    <string name="error_renaming_folder">Cannt rename folder</string>
    <string name="error_renaming_file">Cannt rename file</string>
    <string name="music">Music</string>
    <string name="video">Videos</string>
    <string name="image">Pictures</string>
    <string name="doc">Docs</string>
    <string name="app">Apps</string>
    <string name="sdcardcapa_default">0 G</string>
    <string name="sdcardcapa_total">Total：</string>
    <string name="sdcardcapa_available">Avail：</string>
    <string name="sure_delete">Permanently remove this %s?</string>
    <string name="sure_mass_delete">Delete selected items?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="copiing">Copying files...</string>
    <string name="cutting">Cutting files...</string>
    <string name="deleting">Deleting files...</string>
    <string name="copy_continuecopy">Copy</string>
    <string name="cut_continuecut">Cut</string>
    <string name="overwrite_confirm">Do you really want to overwrite %s files?</string>
    <string name="overwrite_continue">Overwrite</string>
    <string name="cancelcopy">Cancel</string>
    <string name="cancelcut">Cancel</string>
    <string name="child_invalidoperation">Operation cancelled, destination folder is subfolder of %s file</string>
    <string name="cannt_rename_same_name">Unable to rename the file with the same name</string>
    <string name="find_no_associated_app">Unable to find associated app</string>
    <string name="path_choice">Choose Folder</string>
    <string name="sdcard_unavailable">SD card unavailable, please check</string>
    <string name="disselect_all">Unselect All</string>
    <string name="copyof">Copy of \s</string>
    <string name="same_name_files_operation_cancel">Operation cancelled, files have the same name</string>
    <string name="detail_name">Name：</string>
    <string name="detail_size">Size：</string>
    <string name="detail_location">Path：</string>
    <string name="detail_lastmodifiedtime">Time：</string>
    <string name="detail_readable">Readable：</string>
    <string name="detail_writable">Writable：</string>
    <string name="detail_hidden">Hidden：</string>
    <string name="title_detail">Hidden：</string>
    <string name="computing">Processing...</string>
    <string name="currCategoryNoFile">No file in current category</string>
    <string name="used_percent_default_text">Used: </string>
    <string name="gmail">gMail</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="sms">SMS</string>
    <string name="notrenameforyou">Name not changed</string>
    <string name="loadingfiles">Loading... Please wait</string>
    <string name="position_dir">Folder</string>
    <string name="position_category">Category</string>
    <string name="share">Send</string>
    <string name="privacy_home">Privacy Home</string>
    <string name="move_to_privacy_box">Move in privacy box</string>
    <string name="cancel_move">Cancel moving</string>
    <string name="tab_privacy">Privacy</string>
    <string name="moving_to_privacy">Moving to privacy box...</string>
    <string name="isloading">  \s   Loading</string>
    <string name="target_name_is_not_allow_null">Target name cannt be empty</string>
    <string name="rename_fail">The name contains invalid character.</string>
    <string name="sure">ok</string>
    <string name="feedback_confirm">Wifi is now unavailable.One picture you want to send is larger than 300k,which will cause some fee on data flow.\n \nContinue to send ?</string>
    <string name="reminder">Reminder</string>
    <string name="directly_install">Directly install</string>
    <string name="appInstallStartTicker">Start to install...</string>
    <string name="firstAppIsInstalling">First Program is installing...</string>
    <string name="nowInstallingForYou">now installing for you</string>
    <string name="appInstallSuccessHint">installed</string>
    <string name="appInstallFailureHint">not installed</string>
    <string name="totalInstallFinishedHint">Programs installation finished.</string>
    <string name="installing">Installing</string>
    <string name="success">Success:</string>
    <string name="failure">Failure:</string>
    <string name="unhandled">Unhandled:</string>
    <string name="toInstallSum">All:</string>
    <string name="already"></string>
    <string name="theme">theme</string>
    <string name="available">Available</string>
    <string name="sdcardhome">SD card</string>
    <string name="memory">Memory</string>
    <string name="scan_finish_toast">Update done</string>
    <string name="scaning_toast">During scanning %s</string>
    <string name="scaning">Scanning %s</string>
    <string name="scan_finish_all_toast">All categories updated</string>
    <string name="up_to_date">uptodate</string>
    <string name="uninstalled">uninstalled</string>
    <string name="upgrade"> upgrade available</string>
    <string name="installed">installed</string>
    <string name="version">version :</string>
    <string name="renaming">updating categoies for you,please wait</string>
    <string name="unknown">unknown</string>
    <string name="copied">sd is full，copied files: %s</string>
    <string name="uncopied">uncopied: %s</string>
    <string name="ringtone_clock">Set as Default Clock</string>
    <string name="ringtone_sms">Set as Default Notification</string>
    <string name="ringtone_comingcall">Set as Default Call</string>
    <string name="ringtone_set">ringtone set</string>
    <string name="ringtone_set_success">Ringtone set successful</string>
    <string name="ifShowHiddenFile">Show hidden files</string>
    <string name="remember_my_choice">Remmember my choice</string>
    <string name="oneKeyCleanEmptyFolder">One key clear all empty folders</string>
    <string name="oneKeyCleanEmptyFolder_detail">clearn all unused empty folders in your SD card,all apps out-of-date ones are within targets</string>
    <string name="oneKeyCleanEmptyFolder_sure">This will remove all empty directoris under your SDcard Path, include third party app\'s generated folders,sure to perform?</string>
    <string name="oneKeyCleanEmptyFolder_result_hint">%s folders done removed!</string>
    <string name="filtersize_pic_level">Larger than %s </string>
    <string name="setup">setup</string>
    <string name="music_default_album">music</string>
    <string name="music_unknown">unknown</string>
    <string name="music_album">album</string>
    <string name="music_artist">artist</string>
    <string name="menu_file_sort">file sort</string>
    <string name="longtime_update">it will take several minutes to update %s info.please wait</string>
    <string name="detail_album">album：</string>
    <string name="detail_artist">artist：</string>
    <string name="i_got_it">I got it</string>
    <string name="cannt_find_matched_result">Cannt find matched result</string>
    <string name="menu_onekeyclean">Clean Empty Directories</string>
    <string name="operate">More</string>
    <string name="prefer_memory">To phone memory</string>
    <string name="prefer_sdcard">To SD card</string>
    <string name="prefer_system">I don\'t care</string>
    <string name="donot_show_it_again">Don\'t show it again</string>
    <string name="setupto">Location</string>
    <string name="unexpectedlyStop">Setup interupted cause unexpectedly exition</string>
    <string name="cleanstarted">Clean Begin</string>
    <string name="cleanfinished">Clean Finished</string>
    <string name="cleancount">%s folders clean done</string>
    <string name="click_more_detail">Click for more detail</string>
    <string name="click_hide_detail">Hide detail</string>
    <string name="show_hidden_file">Show hidden files</string>
    <string name="file_name">File Name</string>
    <string name="dont">Don\'t</string>
    <string name="menu_my_pic_size">My pic size</string>
    <string name="filter_pic_size">Filter pic by size</string>
    <string name="batch_install">Install selected apks</string>
    <string name="confirm">OK</string>
    <string name="no_file">No files</string>
    <string name="operation_cancel">Cancel</string>
    <string name="operation_copy">Copy</string>
    <string name="operation_delete">Delete</string>
    <string name="operation_move">Move</string>
    <string name="operation_send">Send</string>
    <string name="preference_title">General Settings</string>
    <string name="pref_primary_folder">Home folder</string>
    <string name="pref_read_root">Read root</string>
    <string name="pref_show_real_path">Display real path</string>
    <string name="default_primary_folder">/mnt/sdcard2</string>
    <string name="pref_primary_folder_summary">The folder that appears when the app starts, and current value is <xliff:g id="string">%1$s</xliff:g></string>
    <string name="pref_show_real_path_summary">Show real path in navigation bar</string>
   	<string name="info_setting_message">Message</string>
   	<string name="info_setting_message_str">Message content</string>
   	<string name="info_setting_app">Application</string>
   	<string name="info_setting_app_str">Installed applications</string>
   	<string name="info_setting_image">Image</string>
   	<string name="info_setting_image_str">Picture</string>
   	<string name="info_setting_contact">Contact</string>
   	<string name="info_setting_contact_str">Contacter information</string>
   	<string name="info_setting_music">Music Player</string>
   	<string name="info_setting_music_str">Music files</string>
   	<string name="info_setting_setting">System setting</string>
   	<string name="info_setting_setting_str">Detail setting page</string>
   	<string name="info_setting_file">Local</string>
   	<string name="info_setting_file_str">Other local files</string>
    <string name="filtersize_pic_title">Filter pictures by sizes</string>
    <string name="filtersize_pic_summary">Filter pictures by sizes</string>
    <string name="filtersize_pic_preference">0</string>
</resources>