<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="bottom"
    android:background="#C1CDC1">
    <item android:id="@+id/action_delete"
        android:icon="@drawable/lewa_ic_folder_delete"
        android:title="@string/operation_delete"
        android:layout_alignParentBottom="true"
        android:background="#ebebeb"
        android:showAsAction="always" />
    <item android:id="@+id/action_copy"
        android:icon="@drawable/lewa_ic_folder_copy"
        android:title="@string/operation_copy"
        android:showAsAction="always" />
    <item android:id="@+id/action_move"
        android:icon="@drawable/lewa_ic_folder_cut"
        android:showAsAction="always"
        android:title="@string/operation_move" />
    <item android:id="@+id/action_send"
        android:icon="@drawable/lewa_ic_folder_send"
        android:showAsAction="never"
        android:title="@string/operation_send" />
    <!-- <item android:id="@+id/action_select_all"
        android:icon="@drawable/lewa_ic_folder_all"
        android:showAsAction="never"
        android:title="@string/operation_selectall" />
    <item android:id="@+id/action_cancel"
        android:icon="@drawable/lewa_ic_folder_cancel"
        android:showAsAction="never"
        android:title="@string/operation_cancel" /> -->
    <item android:id="@+id/action_rename"        
        android:showAsAction="never"
        android:title="@string/menu_rename" />
    <item android:id="@+id/action_fileinfo"        
        android:showAsAction="never"
        android:title="@string/menu_fileinfo" />
</menu>